# rubric

./: .env.example  .gitignore  AGENTS.md  README.md  drizzle.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
.claude/: launch.json
.github/workflows/: rubric.yml
analysis/: README.md  failure-clustering.ipynb  pyproject.toml
analysis/data/: results.parquet
app/: globals.css  layout.tsx
app/(app)/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
app/tokens/: base.css  colors.css  effects.css  spacing.css  typography.css
components/case-detail/: case-actual-diff.tsx  case-blob-code.tsx  case-detail-view.tsx  case-not-found-view.tsx  judge-panel.tsx  scorers-panel.tsx
components/errors/: cluster-treemap.tsx  error-workbench-view.tsx  promote-flow.tsx  scorer-cross-tab.tsx  view-model.ts
components/gating/: ci-gating-view.tsx  gate-board.tsx  gate-detail-panel.tsx  gate-history.tsx  gate-metric.ts  override-panel.tsx
components/illustrations/: rubric-illustration.tsx
components/judges/: bias-scatter.tsx  judge-calibration-view.tsx
components/model-comparison/: comparison-table.tsx  cost-accuracy-scatter.tsx  inter-judge-matrix.tsx  lib.ts  model-comparison-view.tsx
components/prompts/: prompt-timeline-view.tsx  version-node.tsx
components/regressions/: prompt-diff.tsx  regressed-cases.tsx  regression-diff-view.tsx
components/run-detail/: case-drawer.tsx  run-detail-view.tsx  (+2 more)
db/: index.ts  schema.ts  seed.ts
lib/: env.ts  format.ts  logger.ts  result.ts  validation.ts
(+183 files in other folders)
