[project]
name = "rubric-analysis"
version = "0.1.0"
description = "M5 error-analysis workflow — failure clustering over rubric's exported case-level results"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=17",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
